--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                 <div>
                     <span class="eyebrow">⚡ ISfall2025grp2-6 • Data • Systems • Impact</span>
                     <h1>We build bold Information Systems that ship and shine.</h1>
+                    <h2>Elsie,Skyler, Austin, and Michael edited this</h2>
                     <p>
                         From data pipelines and dashboards to full‑stack products, we turn ideas into
                         polished, production‑ready systems with measurable impact.
