--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
                 <div class="card">
                     <div class="icon">CT</div>
                     <h3>Collab & Tools</h3>
+                    <p>Austin Edited This</p>
                     <p>Dev tooling, automation, and docs that keep teams moving fast.</p>
                 </div>
             </div>
@@ -363,6 +364,7 @@
                     <div class="icon">🏆</div>
                     <h3>Ship It</h3>
                     <p>Quarterly showcase of shipped features and wins.</p>
+                    <p> Austin Change</p>
                 </div>
             </div>
         </section>
