--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="container nav-inner">
             <div class="brand">
                 <div class="brand-logo">IS</div>
-                <div>Group 2-6 • Information Systems</div>
+                <div>SKYLER EDITED THIS HAHAHAHAHAHAHA</div>
             </div>
             <nav class="nav-links">
                 <a href="#about">About</a>
